更新 子链交易状态

--- a/i18n/wallet.en.i18n.json
+++ b/i18n/wallet.en.i18n.json
@@ -301,6 +301,8 @@
                 "latest": "Recent Transaction on Subchain"
             },
             "scsListTitle": "Subchain List",
+			"baseChain": "Mother Chain",
+			"subChain": "SubChain",
             "scsAccountsDescription": "Subchain Account",
             "buttons": {
                 "addSubChain": "Configure Subchain"
